# libsoftfp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  compile_flags.txt  configure.sh  libsoftfp.pc.in
src/: common.h  lsp.h
src/binary/: arithmetic.h  common.h  common_source.h  common_target.h  compare.h  complex.h  divmnu.h  intconv.h  target_reset.h
src/cast/: d2d.h  d2f.h  f2d.h  f2f.h
src/decimal/: arithmetic.h  common.h  common_source.h  common_target.h  compare.h  intconv.h  packing.c  packing.h  target_reset.h
src/misc/: arith.c  arith.h  divmnu.c  divmnu.h  fenv.c  misc.c  misc.h
template/: complex.template.h  config.binary.template.h  config.decimal.template.h  decimal.template.h  fenv.template.h  functions.template.h  license.template.h  softfp.template.h
